# RTPA_Studio

./: .replit  CALIBRAGE_OCR_README.md  CMakeLists.txt  README.md  README_Migration_CPP.md  RTPA_Studio.bat  config.yaml  current_dependencies.txt  install_and_run_rtpa.py  install_gpu_pytorch.py  install_rtpa_dependencies.py  launch_rtpa.py  main.py  main_gui.py  main_headless.py  pyproject.toml  replit.md  requirements.txt  rtpa.py  rtpa_minimal.py  rtpa_studio.py  run_rtpa.sh  setup_installer.py  test_algorithms_validation.py  test_cfr_integration.py  test_final.py  test_performance_benchmarks.py  test_rtpa.py  test_winamax_detection.py  version.json
.ccls-cache/@@home@runner@workspace/: @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@bitsperlong.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@errno-base.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@errno.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@int-ll64.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@posix_types.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@types.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm@bitsperlong.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm@errno.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm@posix_types.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm@posix_types_64.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm@types.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@linux@close_range.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@linux@const.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@linux@errno.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@linux@kernel.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@linux@posix_types.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@linux@stddef.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@linux@sysinfo.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@linux@types.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stdarg___gnuc_va_list.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_header_macro.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_max_align_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_null.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_nullptr_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_offsetof.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_ptrdiff_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_size_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_wchar_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__wmmintrin_aes.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__wmmintrin_pclmul.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@adcintrin.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@adxintrin.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@amxcomplexintrin.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@amxfp16intrin.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@amxintrin.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@avx2intrin.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@avx512bf16intrin.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@avx512bitalgintrin.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@avx512bwintrin.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@avx512cdintrin.h.blob  (+452 more)
.ccls-cache/@home@runner@workspace/: cpp_modules@rtpa_core.cpp.blob  src@algorithms@CfrEngine.cpp  src@algorithms@CfrEngine.cpp.blob  src@algorithms@CfrEngine.h  (+14 more)
attached_assets/: Pasted-2025-09-08-12-40-30-788-src-algorithms-cfr-trainer-INFO-Entra-nement-termin-2025-09-08-12-40-1757328083218_1757328083218.txt  Pasted-python-main-py-2025-09-07-23-12-40-085-RTPA-Studio-INFO-D-marrage-de-RTPA-Studio-2025-09-07-1757279762471_1757279762471.txt  RTPAStudio_Audit_Report_FR_1757329429223.md  RTPA_Studio_Install_Report_1757337379560.md  cahier_des_charges_1757239581203.md
cfr_env/: pyvenv.cfg
config/: settings.yaml
cpp_modules/: rtpa_core.cpp  setup.py
deprecated_python/: build_rtpa.py  debug_windows_ocr.py  launch_windows.py  rtpa.py  setup_rtpa_rust.py  test_cfr_rust.py
deprecated_rust/rust_cfr_engine/: Cargo.toml
deprecated_rust/rust_cfr_engine/src/: lib.rs  utils.rs
deprecated_rust/rust_cfr_engine/src/cfr/: abstraction.rs  full_engine.rs  mod.rs
deprecated_rust/rust_cfr_engine/src/gpu/: compute.rs  mod.rs
rust_cfr_engine/: Cargo.toml
rust_cfr_engine/src/: lib.rs  types.rs
rust_cfr_engine/src/cfr/: engine.rs  full_engine.rs  mod.rs  trainer.rs
rust_cfr_engine/src/gpu/: compute.rs
rust_cfr_engine/src/gpu/shaders/: cfr_compute.wgsl
src/: __init__.py  main.cpp
(+40 files in other folders)
