[package]
name = "rust_cfr_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_cfr_engine" 
crate-type = ["cdylib", "rlib"]

[dependencies]
# PyO3 pour bindings Python - Version MVP simplifiée
pyo3 = { version = "0.20", features = ["extension-module"] }

[features]
default = ["gpu"]
gpu = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
