[package]
name = "rust_cfr_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_cfr_engine" 
crate-type = ["cdylib", "rlib"]

[dependencies]
# PyO3 pour bindings Python
pyo3 = { version = "0.20", features = ["extension-module"] }

# Performance et parallélisme
rayon = "1.8"           # Parallélisme ultra-rapide
rand = "0.8"            # Random optimisé
num_cpus = "1.0"        # Detection CPU cores
ahash = "0.8"           # Hash maps ultra-rapides
dashmap = "5.5"         # Concurrent collections

# Sérialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["gpu"]
gpu = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
