[package]
name = "rust_cfr_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_cfr_engine" 
crate-type = ["cdylib"]

[dependencies]
# PyO3 pour bindings Python - Version 0.21 pour compatibilité
pyo3 = { version = "0.21", features = ["extension-module"] }

# Performance - Version simplifiée pour éviter conflits
rand = "0.8"

[features]
default = ["gpu"]
gpu = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
